# gtest

./: .travis.yml  CMakeLists.txt  README.md
lib/: mymathfunc.cc  mymathfunc.hpp
src/: main.cc
test/: test_mymathfunc.cc
